Bug 264867 - KHolidays::HolidayRegionSelector doesn't get translated
Summary: KHolidays::HolidayRegionSelector doesn't get translated
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-clock (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: John Layt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-30 18:06 UTC by Lasse Liehu
Modified: 2011-03-02 01:26 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lasse Liehu 2011-01-30 18:06:15 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

The widget doesn't get entirely translated for example in the calendar plasma applet's configuration. Seems that the catalog "libkholidays" isn't searched for translations as adding a KGlobal::locale()->insertCatalog("libkholidays") before using the widget fixes the problem.

Reproducible: Always

Steps to Reproduce:
1. Use x-test.
2. Open the calendar applet's configuration.
3. See that there are no xx's in the HolidayRegionSelector widget.



Or using for example German some of the names of the countries do get translated (from catalog desktop_kdebase?), but everything else does not.
Comment 1 Christophe Marin 2011-01-30 20:52:02 UTC
reassign to plasma.
Comment 2 Burkhard Lück 2011-01-31 10:59:59 UTC
Confirmed in trunk + 4.6 compiled from sources.

Fix:

--- kdebase/workspace/plasma/generic/applets/analog-clock/clock.cpp     (Revision 1212270)
+++ kdebase/workspace/plasma/generic/applets/analog-clock/clock.cpp     (Arbeitskopie)
@@ -57,6 +57,7 @@
       m_animateSeconds(false)
 {
     KGlobal::locale()->insertCatalog("libplasmaclock");
+    KGlobal::locale()->insertCatalog("libkholidays");
     // this catalog is only used once on the first start of the clock to translate the timezone in the configuration file
     KGlobal::locale()->insertCatalog("timezones4");
     setHasConfigurationInterface(true);
Comment 3 John Layt 2011-01-31 11:16:18 UTC
My bad, I'll patch once the git migration has settled down and I can get a working clone.
Comment 4 John Layt 2011-03-02 00:42:54 UTC
Git commit 5c7add026ba1a0048ba884217f7454998164dcf4 by John Layt.
Committed on 03/02/2011 at 14:40.
Pushed by jlayt into branch 'KDE/4.6'.

Include KHolidays translation catalog in plasma calendar and clocks

Fix missing catalog

CCBUG: 264867

M  +3    -1    libs/plasmaclock/calendartable.cpp     

http://commits.kde.org/kde-workspace/5c7add026ba1a0048ba884217f7454998164dcf4
Comment 5 John Layt 2011-03-02 01:26:49 UTC
Git commit a811fbfc15520a1d186eefb1276a4206a0fa35d4 by John Layt.
Committed on 03/02/2011 at 14:40.
Pushed by jlayt into branch 'master'.

Include KHolidays translation catalog in plasma calendar and clocks

Fix missing catalog

BUG: 264867
FIXED-IN: 4.6.2

(cherry picked from commit 5c7add026ba1a0048ba884217f7454998164dcf4)

M  +3    -1    libs/plasmaclock/calendartable.cpp     

http://commits.kde.org/kde-workspace/a811fbfc15520a1d186eefb1276a4206a0fa35d4