Include KHolidays translation catalog in plasma calendar and clocks

Fix missing catalog

BUG: 264867
FIXED-IN: 4.6.2

(cherry picked from commit 5c7add026ba1a0048ba884217f7454998164dcf4)